style: fix spacing between sections

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -105,7 +105,7 @@ section:not(#hero) {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: var(--spacing-section) 0;
+    margin: 0 0 var(--spacing-section) 0;
 }
 
 .section-header::before {
